Fixed spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,16 @@ body{
 }
 
 .board {
-  max-width: 95%;
+  width: 95%;
   height: 85%;
   border-radius: 16px;
   display: flex;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.board + div {
+  width: 100%
 }
 
 .input-container {
